<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/addClothItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/addClothItem"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />

    <Button
        android:id="@+id/showClothes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showClothes"
        android:backgroundTint="@color/main_activity_btns"
        />

    <Button
        android:id="@+id/drawers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_drawers"
        android:backgroundTint="@color/main_activity_btns"
        />

    <Button
        android:id="@+id/cabin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cabin"
        android:backgroundTint="@color/main_activity_btns"
        />

    <Button
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/events"
        android:backgroundTint="@color/main_activity_btns"
        />


</LinearLayout>