<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddClothItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="40dp"
            android:layout_gravity="center"
            android:layout_margin="8dp">
            <ImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:srcCompat="@tools:sample/avatars"
                android:src="@drawable/ic_baseline_add_circle_24"
                tools:ignore="ContentDescription" />
        </androidx.cardview.widget.CardView>




            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/clothing_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/clothingType"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/clothing_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/clothingColor"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/datePick"
                    android:src="@drawable/ic_date"
                    android:layout_margin="8dp"
                    tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/date"
                        android:layout_gravity="center"
                        android:enabled="false"
                        android:textSize="18sp"
                        android:hint="@string/clothing_date"
                        android:textStyle="italic|bold"
                        android:textColor="@color/black_500"
                        />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/clothing_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/clothingPrice"
                    android:inputType="number"
                    android:layout_margin="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/confirm"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/confirm" />
        <Button
            android:id="@+id/update"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_margin="8dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/update" />

        </LinearLayout>

</ScrollView>