<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DrawersActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textLay"
                    android:hint="@string/combinationName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/combinationName"
                        android:layout_margin="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/head"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/head"
                    android:backgroundTint="@color/main_activity_btns"
                    />
                <ImageView
                    android:id="@+id/headImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/face"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/face"
                    android:backgroundTint="@color/main_activity_btns"
                    />

                <ImageView
                    android:id="@+id/faceImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/upper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upper"
                    android:backgroundTint="@color/main_activity_btns"
                    />
                <ImageView
                    android:id="@+id/upperImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />
                <Button
                    android:id="@+id/lower"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lower"
                    android:backgroundTint="@color/main_activity_btns"
                    />
                <ImageView
                    android:id="@+id/lowerImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/foot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/foot"
                    android:backgroundTint="@color/main_activity_btns"
                    />

                <ImageView
                    android:id="@+id/footImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </ScrollView>




        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shareCom"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:fabSize="normal"
            android:visibility="gone"
            android:elevation="6dp"
            android:src="@drawable/ic_share_24"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addCom"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:fabSize="normal"
            android:elevation="6dp"
            android:src="@drawable/ic_baseline_add_24"
            tools:ignore="ContentDescription" />

    </FrameLayout>


</LinearLayout>