<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_margin="24dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCard2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp"
        android:id="@+id/cardLay1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/eventName"
                android:textColor="@color/black_200"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/eventName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_500"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/eventType"
                android:textColor="@color/black_200"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/eventType"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_500"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/eventDate"
                android:textColor="@color/black_200"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/eventDate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_500"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/eventLocation"
                android:textColor="@color/black_200"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/eventLocation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_500"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/notify"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_notifications_24"
                android:layout_weight="1"
                android:padding="6dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="2"
                android:visibility="invisible"
                android:padding="6dp"
                android:textSize="15sp" />



            <Button
                android:id="@+id/extra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="3"
                android:padding="6dp"
                android:textSize="12sp"
                android:textStyle="bold|italic"
                android:text="@string/eventClothes"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>