<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_margin="24dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myCard1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="6dp"
        android:id="@+id/cardLay"
        >

       <ImageView
           android:id="@+id/clothingImage"
           android:layout_width="match_parent"
           android:layout_height="200dp"
           android:scaleType="centerCrop"
           android:layout_marginBottom="8dp"
           tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clothing_type"
                android:textColor="@color/black_200"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_500"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clothing_color"
                android:textColor="@color/black_200"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/color"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_500"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clothing_price"
                android:textColor="@color/black_200"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_500"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/clothing_date"
                android:textColor="@color/black_200"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />
            <TextView
                android:id="@+id/dateOfPurchase"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black_500"
                android:textStyle="bold|italic"
                android:layout_marginStart="8dp"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>